# TurboQuant_pp

./: .gitignore  PLAN.md  README.md  TECH_DEBT.md  apocalypse.sh  debug_hybrid.py  debug_qjl.py  debug_triton.py  full_test_results.txt  implementation_plan.md  latest_test_results.txt  main.py  pyproject.toml  test_results.txt
scratch/: audit_laplace.py  profile_turboquant.py  test_triton_loop.py  verify_fused.py
scripts/: benchmark_e2e.py  check_mask.py  debug_parity.py  patch_demo.py  run_tq_server.py  test_minimal.py
src/turboquant/cache/: block_pool.py  manager.py  routing.py
src/turboquant/integrations/: patcher.py
src/turboquant/kernels/: __init__.py  cache_ops.py  fused_attention.py  fused_ref.py  paged_fused.py  quant_fused.py  triton_attention.py  triton_dequant_v.py  triton_fused.py  triton_mse.py  triton_qjl.py  triton_utils.py
src/turboquant/layers/: __init__.py  attention_layer.py  config.py
src/turboquant/ops/: __init__.py  rope.py  rotation.py  sign_array.py  wht.py
src/turboquant/quant/: __init__.py  key_quantizer.py  lloyd_max.py  quant_base.py  quantizer.py  value_quantizer.py
src/turboquant/server/: app.py  (+1 more)
tests/: test_architectural_branching.py  test_fused_attention.py  test_h2o_eviction.py  test_hell_fused.py  test_hybrid_routing.py  test_kv_manager.py  test_lloyd_max.py  test_paged_attention.py  test_qjl.py  test_quantizer.py  test_quest_sparsity.py  test_rope.py  test_rotation.py  test_sign_array.py  test_sota_snr_parity.py  test_torture_quant.py  test_triton_dequant_v.py  test_value_quantizer.py  test_wht.py  verify_triton.py
