[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant++: WHT-Driven Dual KV Quantization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pytest>=8.4.2",
    "torch>=2.8.0",
    "triton>=3.4.0",
    "transformers>=4.40.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "sentencepiece>=0.1.99",
    "accelerate>=0.29.0",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "scipy>=1.10.0",
    "datasets>=2.19.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
